WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233354
:hover with descendant selector not invalidated correctly in shadow tree
https://bugs.webkit.org/show_bug.cgi?id=233354
Summary
:hover with descendant selector not invalidated correctly in shadow tree
Antti Koivisto
Reported
2021-11-19 01:01:57 PST
Invalidation is getting optimized away.
Attachments
Patch
(5.55 KB, patch)
2021-11-19 01:21 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-19 01:21:26 PST
Created
attachment 444788
[details]
Patch
Antti Koivisto
Comment 2
2021-11-19 01:21:44 PST
rdar://85534355
EWS
Comment 3
2021-11-19 08:53:10 PST
Committed
r286063
(
244450@main
): <
https://commits.webkit.org/244450@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444788
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug