:hover with descendant selector not invalidated correctly in shadow tree https://bugs.webkit.org/show_bug.cgi?id=233354

Reviewed by Antoine Quint.

Source/WebCore:

We optimize :hover and :active by only invalidating for descendant selectors with a single tree walk.
This doesn't work correctly for shadow trees as their scoped style may differ and the invalidation
is limited to a single scope anyway.

Fix by doing descendant invalidation for each affected scope.

Test: fast/selectors/hover-descendant-shadow-tree.html

* dom/Document.cpp:
(WebCore::Document::updateHoverActiveState):

We need to perform scoped descendant invalidation for elements that are parented to ShadowRoot.

LayoutTests:

* fast/selectors/hover-descendant-shadow-tree-expected.html: Added.
* fast/selectors/hover-descendant-shadow-tree.html: Added.
* platform/ios/TestExpectations:



Canonical link: https://commits.webkit.org/244450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286063 268f45cc-cd09-0410-ab3c-d52691b4dbfc